# wiimatch

./: .coveragerc  .readthedocs.yml  CHANGELOG.rst  LICENSE.txt  README.rst  azure-pipelines.yml  azure-templates.yml  setup.cfg  setup.py
docs/: .rtd-environment.yml  Makefile  conf.py  index.rst  rtd-pip-requirements.txt
docs/source/: conf.py  containers.rst  index.rst  utils.rst
docs/wiimatch/: lsq_optimizer.rst  match.rst
wiimatch/: __init__.py  containers.py  lsq_optimizer.py  match.py  utils.py
wiimatch/tests/: test_match.py  test_utils.py
