[metadata]
package_name = wiimatch
description = A package for optimal "matching" N-dimentional image background
long_description = A package for optimal "matching" N-dimentional image background using multi-variate polynomials
author = Mihai Cara
author_email = help@stsci.edu
license = BSD-3-Clause
version-date = 18-May-2017
version = 0.1.0
edit_on_github = False
github_project = spacetelescope/wiimatch
description-file = README.rst
url = http://www.stsci.edu/
homepage = http:://www.stsci.edu/

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build relic

[entry_points]

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
